@@ -55,6 +55,7 @@ NEWS
   * [core] respond 411 Length Required if request has Transfer-Encoding: chunked (fixes #631)
   * [core] fixed the loading for default modules if they are specified explicitly
   * [core] lighttpd -tt performs preflight startup checks (fixes #411)
+  * [stat] mimetype.xattr-name global config option (fixes #2631)
 
 - 1.4.39 - 2016-01-02
   * [core] fix memset_s call (fixes #2698)
